chore: configure renovate & pin deps

--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
     "fmt": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
   "dependencies": {
-    "@solidjs/meta": "^0.28.0",
-    "@solidjs/router": "^0.6.0",
-    "solid-js": "^1.6.2",
-    "solid-start": "^0.2.0",
-    "undici": "^5.11.0"
+    "@solidjs/meta": "0.28.2",
+    "@solidjs/router": "0.6.0",
+    "solid-js": "1.6.9",
+    "solid-start": "0.2.13",
+    "undici": "5.15.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "esbuild": "^0.14.54",
-    "eslint": "^8.32.0",
-    "eslint-plugin-solid": "^0.9.3",
-    "postcss": "^8.4.18",
-    "prettier": "^2.8.3",
-    "solid-start-node": "^0.2.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8",
-    "vite-plugin-windicss": "^1.8.10",
-    "windicss": "^3.5.6"
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "esbuild": "0.17.2",
+    "eslint": "8.32.0",
+    "eslint-plugin-solid": "0.9.3",
+    "postcss": "8.4.21",
+    "prettier": "2.8.3",
+    "solid-start-node": "0.2.13",
+    "typescript": "4.9.4",
+    "vite": "3.2.5",
+    "vite-plugin-windicss": "1.8.10",
+    "windicss": "3.5.6"
   }
 }
