--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "undici": "5.15.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.29.2",
     "@types/node": "18.11.18",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
