--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,30 +1,25 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master, playwright ]
+    branches: [main, master, playwright]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        cache: pnpm
-    - name: Install dependencies
-      run: pnpm install
-    - name: Build app
-      run: pnpm run build
-    - name: Install Playwright Browsers
-      run: pnpm exec playwright install --with-deps
-    - name: Run Playwright tests
-      run: pnpm exec playwright test
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup
+      - name: Build app
+        run: pnpm run build
+      - name: Install Playwright Browsers
+        run: pnpm exec playwright install --with-deps
+      - name: Run Playwright tests
+        run: pnpm exec playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
