--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
 on:
   push:
-    branches: [main, master, playwright]
+    branches: [main, master, playwright, 'renovate/*']
   pull_request:
     branches: [main, master]
 jobs:
