--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base",
-    ":automergeAll",
-    ":automergeBranch"
+    "config:base"
   ],
   "prConcurrentLimit": 3,
   "lockFileMaintenance": {
